force-app/main/default/objects/Sick_leave__c/Sick_leave__c.object-meta.xml
<CustomObject>
    <label>Больничный</label>
    <nameField>
        <label>Номер больничного</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Больничные</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>