force-app/main/default/objects/Sick_leave__c/fields/Date_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_Contact__c</fullName>
    <label>Дата контакта</label>
    <type>Date</type>
</CustomField>