force-app/main/default/objects/Sick_leave__c/fields/Date_Express_Test__c.field-meta.xml
<CustomField>
    <fullName>Date_Express_Test__c</fullName>
    <label>Дата экспресс-теста</label>
    <type>Date</type>
</CustomField>