force-app/main/default/objects/Sick_leave__c/fields/Date_Letter__c.field-meta.xml
<CustomField>
    <fullName>Date_Letter__c</fullName>
    <label>Дата письма МЗЦГиЭ</label>
    <type>DateTime</type>
</CustomField>