force-app/main/default/objects/Sick_leave__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Диагноз</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B34.2</fullName>
            </value>
            <value>
                <fullName>B97.2</fullName>
            </value>
            <value>
                <fullName>J06.9</fullName>
            </value>
            <value>
                <fullName>J18</fullName>
            </value>
            <value>
                <fullName>Z20.8</fullName>
            </value>
            <value>
                <fullName>Z20.8;J06.9</fullName>
                <label>Z20.8; J06.9</label>
            </value>
            <value>
                <fullName>Z20.8;J18</fullName>
                <label>Z20.8; J18</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>