force-app/main/default/objects/Sick_leave__c/fields/Emergency_Notification__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Notification__c</fullName>
    <label>Экстренное извещение</label>
    <length>255</length>
    <type>Text</type>
</CustomField>