force-app/main/default/objects/Sick_leave__c/fields/End_Isolation__c.field-meta.xml
<CustomField>
    <fullName>End_Isolation__c</fullName>
    <label>Снятие с изоляции</label>
    <type>Date</type>
</CustomField>