force-app/main/default/objects/Sick_leave__c/fields/First_Date_Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Sick_Leave__c</fullName>
    <label>Дата первичной ВН</label>
    <type>Date</type>
</CustomField>