force-app/main/default/objects/Sick_leave__c/fields/Is_Ready_Notice_Isolation__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_Notice_Isolation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Срок изоляции истёк?</label>
    <type>Checkbox</type>
</CustomField>