force-app/main/default/objects/Sick_leave__c/fields/Is_Ready_Notice_VKK__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_Notice_VKK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ВКК для больничного проведен?</label>
    <type>Checkbox</type>
</CustomField>