force-app/main/default/objects/Sick_leave__c/fields/Letter_Text__c.field-meta.xml
<CustomField>
    <fullName>Letter_Text__c</fullName>
    <label>Письмо МЗЦГиЭ</label>
    <length>25</length>
    <type>Text</type>
</CustomField>