force-app/main/default/objects/Sick_leave__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Пациент</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Больничные</relationshipLabel>
    <relationshipName>Patient</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>