force-app/main/default/objects/Sick_leave__c/fields/Start_Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>Start_Sick_Leave__c</fullName>
    <label>Начало ВН</label>
    <type>Date</type>
</CustomField>