force-app/main/default/objects/Sick_leave__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Статус</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Активен</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Закрыт</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>