force-app/main/default/objects/Sick_leave__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Sick_Leave__c</columns>
    <columns>Status__c</columns>
    <columns>Diagnosis__c</columns>
    <columns>Date_Smear__c</columns>
    <columns>Date_Express_Test__c</columns>
    <columns>Date_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>